--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@
 
 url: http://kirti91.github.io
 title: Kirti's Blog
-subtitle: 
+subtitle: IT world
 author: kirti
 simple_search: http://google.com/search
 description:
